removed template modal window from js

--- a/src/partials/callback.html
+++ b/src/partials/callback.html
@@ -19,7 +19,7 @@
                 <label class="callback__label" for="message">Комментарий</label>
                 <textarea class="callback__input callback__input_text" name="message" id="message" rows="3"></textarea>
                 <label class="callback__label callback__label_check" for="agree">
-                    <input class="callback__checkbox" type="checkbox" name="agree" id="agree">
+                    <input class="callback__checkbox" type="checkbox" name="agree" id="agree" checked="checked">
                     <span class="callback__span"></span>
                     Нажимая кнопку отправить заявку, даю согласие на обработку персональных данных*</label>
                 <button class="callback__btn btn">Отправить заявку</button>
