--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -2061,10 +2061,12 @@ img {
   &__checkbox {
     position: absolute;
     opacity: 0;
-    z-index: -1;
+    height: 0;
+    width: 0;  
   }
-
+  
   &__span {
+    cursor: pointer;
     position: absolute;
     top: 0;
     left: 0;
@@ -2083,6 +2085,8 @@ img {
       left: 4px;
       top: 2px;
       color: $color-F3BC28;
+      opacity: 0;
+      display: none;
     }
   }
 
@@ -2099,20 +2103,28 @@ img {
       margin-bottom: 40px;
       padding-left: 37px;
       margin-left: 16px;
+      cursor: pointer;
 
-      &:hover input~.callback__span {
+      &:hover input ~ .callback__span {
         border-color: $color-F3BC28;
       }
+      input:not(:checked) ~ .callback__span::after {
+        opacity: 0;
+        display: none;
+
+      }
+      input:focus-within ~ .callback__span {
+        border-color: $color-F3BC28;
+      }
+      input:checked ~ .callback__span::after {
+        opacity: 1;
+        display: block;
+      }
+    
+    
     }
   }
 
-  &__chechbox:checked>.callback__span {
-    background-color: $color-FFFFFF;
-
-    &::after {
-      display: block;
-    }
-  }
 }
 
 .footer {
