--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -946,7 +946,7 @@
 
             &_text {
                 height: 50px;
-                border-radius: 20px;
+                border-radius: 16px;
                 margin-bottom: 12px;
             }
         }
@@ -964,6 +964,9 @@
                 height: 6px;
                 left: 3px;
                 top: 1px;
+            }
+            .callback__input_text {
+                border-radius: 12px;
             }
         }
     }
